# minor

./: .gitignore  API_GUIDE.md  COMPLETE_GUIDE.md  COMPLETE_SYSTEM_GUIDE.md  README.md  TESTING_GUIDE.md  pyproject.toml  quick_test.py  requirements.txt  run_api.py  setup.py  streamlit_app.py  test_real_signs.py  test_simple.py  test_with_real_data.py  test_yolo_detection.py
config/: __init__.py  model_config.yaml  settings.py
data/models/data/models/: traffic_flow_model.pkl
data/models/data/models/data/models/: traffic_flow_model.pkl
examples/: basic_usage.py
src/: __init__.py  main.py
src/api/: README.md  __init__.py  __main__.py  main.py
src/core/: __init__.py  road_condition_detection.py  road_detection.py  traffic_flow_prediction.py  traffic_sign_detection.py
src/utils/: __init__.py  image_processing.py
tests/: __init__.py  test_road_detection.py  test_traffic_sign_detection.py
